force-app/main/default/objects/NCMT_RA_Phasing__c/NCMT_RA_Phasing__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>NCMT_RA_Phasing</description>
    <label>Project Phasing</label>
    <nameField>
        <label>Phase Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phasing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>