force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Anticipated_Phasing__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Phasing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Anticipated Phasing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>