force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Phase Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>