force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Design_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Design_Contingency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Design Contingency</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>