force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Escalation_Months__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Months__c</fullName>
    <formula>ROUND((((Planned_Project_Start__c + ( Planned_Duration_Months__c * 30.5/2))- Project__r.Cost_Parameter_Date__c)/30.5) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>