force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Escalation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Percent__c</fullName>
    <formula>((1+ (Project__r.Standard_Escalation_Rate__c/12)  )^  Escalation_Months__c )-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>