force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Home_Office_Overhead_Bond_Profit__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Overhead_Bond_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Home Office Overhead, Bond &amp; Profit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>