force-app/main/default/objects/NCMT_RA_Phasing__c/fields/NCMT_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_Name__c</fullName>
    <label>NCMT Project Name*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>