force-app/main/default/objects/NCMT_RA_Phasing__c/fields/On_site_General_Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>On_site_General_Special_Conditions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On-site General &amp; Special Conditions</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>