force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Planned_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Planned Duration Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>