force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Planned_Project_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Project_Start__c</fullName>
    <inlineHelpText>The anticipated date of mobilization to the site</inlineHelpText>
    <label>Planned Project Start</label>
    <type>Date</type>
</CustomField>