force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project Name</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipName>RA_Phasing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>