force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Total_Cost_w_Design_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_w_Design_Contingency__c</fullName>
    <formula>IF(TEXT(Project__r.Project_type__c) == &apos;Repair &amp; Alteration - Work Item Detail&apos;, (Total_Cost__c * (1  +  Design_Contingency__c )), ( Anticipated_Phasing__c *  Project__r.Total_Project_Cost__c * (1  +  Design_Contingency__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost  w. Design Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>