force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Total_Cost_w_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_w_Escalation__c</fullName>
    <formula>Total_Cost_w_General_Conditions__c * (1 +  Escalation_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost w. Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>