force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Total_GSA_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_GSA_Cost__c</fullName>
    <description>Total GSA cost for the phase</description>
    <label>Total GSA Cost</label>
    <summarizedField>NCMT_RA_Work_Items__c.GSA_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_RA_Work_Items__c.Include_Work_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_RA_Work_Items__c.Work_Item_Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>