force-app/main/default/objects/NCMT_RA_Phasing__c/fields/Work_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Work_Conditions__c</fullName>
    <inlineHelpText>Describes the availability of work space in a building. Ranging from fully vacant to fully occupied.</inlineHelpText>
    <label>Work Conditions</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully vacant building</fullName>
                <default>true</default>
                <label>Fully vacant building</label>
            </value>
            <value>
                <fullName>Vacant work area: clear path travel</fullName>
            </value>
            <value>
                <fullName>Vacant work area: difficult path travel</fullName>
            </value>
            <value>
                <fullName>Partially vacant work area</fullName>
            </value>
            <value>
                <fullName>Fully occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>