force-app/main/default/objects/NCMT_RA_Phasing__c/recordTypes/New_Construction_DES.recordType-meta.xml
<RecordType>
    <fullName>New_Construction_DES</fullName>
    <active>true</active>
    <description>New Construction - DES</description>
    <label>New Construction - DES</label>
</RecordType>