force-app/main/default/objects/NCMT_RA_Phasing__c/recordTypes/Repair_Alteration_Parametric_Entry.recordType-meta.xml
<RecordType>
    <fullName>Repair_Alteration_Parametric_Entry</fullName>
    <active>true</active>
    <description>Repair &amp; Alteration - Parametric Entry</description>
    <label>Repair &amp; Alteration - Parametric Entry</label>
</RecordType>