force-app/main/default/objects/NCMT_RA_Phasing__c/recordTypes/Repair_Alteration_Work_Item_Detail.recordType-meta.xml
<RecordType>
    <fullName>Repair_Alteration_Work_Item_Detail</fullName>
    <active>true</active>
    <description>Repair &amp; Alteration - Work Item Detail</description>
    <label>Repair &amp; Alteration - Work Item Detail</label>
</RecordType>