force-app/main/default/objects/NCMT_RA_Phasing__c/validationRules/Check_for_Project_Status_to_Lock_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Project_Status_to_Lock_Record</fullName>
    <active>true</active>
    <description>If project record is submitted for approval, then it should be locked from editing.</description>
    <errorConditionFormula>(Project__r.IsApprovalProcess__c == True &amp;&amp; TEXT(Project__r.Project_Status__c) != &apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>The record you are trying to edit has been locked.</errorMessage>
</ValidationRule>