force-app/main/default/objects/NCMT_RA_Phasing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>Planned_Project_Start__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Total_GSA_Cost__c</columns>
    <columns>Total_GSA_Parking_Cost__c</columns>
    <columns>Total_Tenant_Amortized_Cost__c</columns>
    <columns>Total_Tenant_RWA_Cost__c</columns>
    <columns>Planned_Duration_Months__c</columns>
    <columns>Escalation_Percent__c</columns>
    <columns>Escalation_Months__c</columns>
    <columns>Work_Conditions__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>On_site_General_Special_Conditions__c</columns>
    <columns>Home_Office_Overhead_Bond_Profit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>